# django-svelte-fullstack

./: .gitignore  pyproject.toml  pytest.init
frontend/: package-lock.json  package.json  rollup.config.js
frontend/src/: App.svelte
myapp/: settings.py
myapp/api/: views.py
myapp/static/frontend/: bundle.js  bundle.js.map
myapp/staticfiles/: staticfiles.json
scripts/: manage.sh  run-dev-server.sh  run-tests-watch.sh  run-tests.sh
